// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mutation: createProperty creates a property with valid data 1`] = `
Object {
  "data": Object {
    "createProperty": true,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Mutation: createProperty fails creating a pinger if input validation fails 1`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "BAD_USER_INPUT",
        "details": Array [
          Object {
            "context": Object {
              "key": "type",
              "label": "type",
              "valids": Array [
                "sell",
                "rent",
                "buy",
                "swap",
                "want_to_rent",
                "auction",
                "other",
              ],
              "value": "WRONG",
            },
            "message": "\\"type\\" must be one of [sell, rent, buy, swap, want_to_rent, auction, other]",
            "path": Array [
              "type",
            ],
            "type": "any.only",
          },
        ],
      },
      "message": "Input validation failed",
    },
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Mutation: createProperty fails creating a pinger if is not authenticated 1`] = `
Object {
  "data": null,
  "errors": Array [
    Object {
      "extensions": Object {
        "code": "UNAUTHENTICATED",
      },
      "message": "Unauthenticated",
    },
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
